--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 126,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Michi\\acoustic_covid_detection\\python\n"
+      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 127,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-03-12_brogrammers_mfccs_3s_breathing_deep_test.pickle\n",
+      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-03-20_resnet18_logmel_combined_breaths_6s_FFT2048_fmax5500_112logmel_1_ChannelResnetInput_weightsOfFirstChannel_layerwiseLR1e-4_1e-3.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 128,
    "id": "5c6806ad-f200-435b-99fc-b504c286d8d0",
    "metadata": {},
    "outputs": [
@@ -62,76 +62,51 @@
      "text": [
       "\n",
       "Datasets used:\n",
-      "mfccs_3s_breathing_deep\n",
-      "           dataset_class:                 <class 'datasets.BrogrammersMFCCDataset'>\n",
-      "           participants_file:             2023_02_21_mfcc_breathing-deep_3s_22kHz.pickle\n",
-      "           augmented_files:               ['2023_02_21_mfcc_breathing-deep_3s_22kHz_augmented.pickle']\n",
-      "           train_set_label_counts:        label '0': 2182  -  label '1': 1640\n",
-      "           types_of_recording:            breathing-deep\n",
+      "logmel_combined_breaths_6s_FFT2048_fmax5500_112logmel\n",
+      "           dataset_class:                 <class 'datasets.ResnetLogmelDataset'>\n",
+      "           participants_file:             2023_03_13_logmel_combined_breaths_6s_FFT2048_fmax5500_112logmel.pickle\n",
+      "           augmented_files:               ['2023_03_14_logmel_combined_breaths_3s_FFT2048_fmax5500_112logmelaugmented.pickle']\n",
+      "           train_set_label_counts:        label '0': 2266  -  label '1': 2196\n",
+      "           types_of_recording:            combined_breaths\n",
       "\n",
       "Audio Processing Parameters:\n",
-      "           type_of_features:              mfcc\n",
-      "           n_time_steps:                  259\n",
-      "           n_features:                    15\n",
+      "           type_of_features:              logmel\n",
+      "           n_time_steps:                  224\n",
+      "           n_features:                    112\n",
       "           sample_rate:                   22050\n",
       "           n_fft:                         8192\n",
-      "           window_length:                 512\n",
-      "           hop_size:                      256\n",
+      "           window_length:                 2048\n",
+      "           hop_size:                      1024\n",
       "           fmin:                          0\n",
-      "           fmax:                          11025\n",
-      "           hop_size_ms:                   11.61\n",
-      "           window_length_ms:              23.22\n",
-      "           duration_seconds:              3.01\n",
+      "           fmax:                          5512\n",
+      "           hop_size_ms:                   46.44\n",
+      "           window_length_ms:              92.88\n",
+      "           duration_seconds:              10.4\n",
       "           fft_res_hz:                    2.69\n",
       "\n",
       "Predetermined Time Domain Augmentations:\n",
-      "           AddGaussianNoise:              'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.02\n",
-      "           PitchShift:                    'probability': 0.8, 'min_semitones': -3, 'max_semitones': 3\n",
-      "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.85, 'max_rate': 1.15\n",
-      "           Gain:                          'probability': 0.8, 'min_gain_in_db': -40, 'max_gain_in_db': 16\n",
-      "______________________________________________________________\n",
-      "model:\n",
-      "BrogrammersModel(\n",
-      "  (conv1): Conv2d(1, 64, kernel_size=(3, 3), stride=(1, 1))\n",
-      "  (maxpool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (conv2): Conv2d(64, 32, kernel_size=(2, 2), stride=(1, 1))\n",
-      "  (batch_norm2d): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (dense1): Linear(in_features=20320, out_features=256, bias=True)\n",
-      "  (dense2): Linear(in_features=256, out_features=128, bias=True)\n",
-      "  (dense3): Linear(in_features=128, out_features=1, bias=True)\n",
-      ")\n",
-      "______________________________________________________________\n",
-      "optimizer:\n",
-      "Adam (\n",
-      "Parameter Group 0\n",
-      "    amsgrad: False\n",
-      "    betas: (0.9, 0.999)\n",
-      "    capturable: False\n",
-      "    eps: 1e-08\n",
-      "    foreach: None\n",
-      "    initial_lr: 0.0001\n",
-      "    lr: 0.0001\n",
-      "    maximize: False\n",
-      "    weight_decay: 0.0001\n",
-      ")\n",
-      "______________________________________________________________\n",
-      "loss_function:\n",
-      "BCEWithLogitsLoss()\n",
+      "           AddGaussianNoise:              'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01\n",
+      "           PitchShift:                    'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2\n",
+      "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05\n",
+      "           Gain:                          'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12\n",
+      "           model:                         ResNet\n",
+      "           optimizer:                     Adam \n",
+      "           loss_function:                 BCEWithLogitsLoss\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                64\n",
-      "           folds per run:                 5\n",
+      "           parameter runs:                1\n",
+      "           folds per run:                 1\n",
       "           epochs:                        250\n"
      ]
     }
    ],
    "source": [
-    "tracker.summarize(detail=\"detail\")"
+    "tracker.summarize(detail=\"compact\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 129,
    "id": "8a88e565-f932-4e07-ab7c-f2f3d3079541",
    "metadata": {},
    "outputs": [
@@ -165,10 +140,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.02</td>\n",
-       "      <td>'probability': 0.8, 'min_semitones': -3, 'max_semitones': 3</td>\n",
-       "      <td>'probability': 0.8, 'min_rate': 0.85, 'max_rate': 1.15</td>\n",
-       "      <td>'probability': 0.8, 'min_gain_in_db': -40, 'max_gain_in_db': 16</td>\n",
+       "      <td>'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01</td>\n",
+       "      <td>'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2</td>\n",
+       "      <td>'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05</td>\n",
+       "      <td>'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -176,19 +151,19 @@
       ],
       "text/plain": [
        "                                                     AddGaussianNoise  \\\n",
-       "0  'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.02   \n",
+       "0  'probability': 0.8, 'min_amplitude': 0.0003, 'max_amplitude': 0.01   \n",
        "\n",
        "                                                    PitchShift  \\\n",
-       "0  'probability': 0.8, 'min_semitones': -3, 'max_semitones': 3   \n",
+       "0  'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2   \n",
        "\n",
        "                                              TimeStretch  \\\n",
-       "0  'probability': 0.8, 'min_rate': 0.85, 'max_rate': 1.15   \n",
+       "0  'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05   \n",
        "\n",
        "                                                              Gain  \n",
-       "0  'probability': 0.8, 'min_gain_in_db': -40, 'max_gain_in_db': 16  "
+       "0  'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 130,
    "id": "76ece74f-fd67-4c38-91df-feab0ff1a455",
    "metadata": {},
    "outputs": [
@@ -207,8 +182,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mfccs_3s_breathing_deep\n",
-      "{'model': 'BrogrammersModel', 'optimizer': 'Adam ', 'loss_function': 'BCEWithLogitsLoss'}\n"
+      "logmel_combined_breaths_6s_FFT2048_fmax5500_112logmel\n",
+      "{'model': 'ResNet', 'optimizer': 'Adam ', 'loss_function': 'BCEWithLogitsLoss'}\n"
      ]
     },
     {
@@ -242,31 +217,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>&lt;class 'datasets.BrogrammersMFCCDataset'&gt;</td>\n",
-       "      <td>2023_02_21_mfcc_breathing-deep_3s_22kHz.pickle</td>\n",
-       "      <td>2023_02_21_mfcc_breathing-deep_3s_22kHz_augmented.pickle</td>\n",
-       "      <td>label '0': 2182  -  label '1': 1640</td>\n",
-       "      <td>breathing-deep</td>\n",
+       "      <td>&lt;class 'datasets.ResnetLogmelDataset'&gt;</td>\n",
+       "      <td>2023_03_13_logmel_combined_breaths_6s_FFT2048_fmax5500_112logmel.pickle</td>\n",
+       "      <td>2023_03_14_logmel_combined_breaths_3s_FFT2048_fmax5500_112logmelaugmented.pickle</td>\n",
+       "      <td>label '0': 2266  -  label '1': 2196</td>\n",
+       "      <td>combined_breaths</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               dataset_class  \\\n",
-       "0  <class 'datasets.BrogrammersMFCCDataset'>   \n",
+       "                            dataset_class  \\\n",
+       "0  <class 'datasets.ResnetLogmelDataset'>   \n",
        "\n",
-       "                                participants_file  \\\n",
-       "0  2023_02_21_mfcc_breathing-deep_3s_22kHz.pickle   \n",
+       "                                                         participants_file  \\\n",
+       "0  2023_03_13_logmel_combined_breaths_6s_FFT2048_fmax5500_112logmel.pickle   \n",
        "\n",
-       "                                            augmented_files  \\\n",
-       "0  2023_02_21_mfcc_breathing-deep_3s_22kHz_augmented.pickle   \n",
+       "                                                                    augmented_files  \\\n",
+       "0  2023_03_14_logmel_combined_breaths_3s_FFT2048_fmax5500_112logmelaugmented.pickle   \n",
        "\n",
        "                train_set_label_counts types_of_recording  \n",
-       "0  label '0': 2182  -  label '1': 1640     breathing-deep  "
+       "0  label '0': 2266  -  label '1': 2196   combined_breaths  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,14 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 131,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a2bc261f2694a3abcb44187215533af",
+       "model_id": "d5daa00028554d1b8fba18bdd48014c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 132,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -332,7 +307,7 @@
      "text": [
       "\n",
       "Parameters used for finding the best performing epoch:\n",
-      "           metric_used:                   loss\n",
+      "           metric_used:                   auc_roc\n",
       "           smoothing:                     10\n",
       "           ignore_first_n_epochs:         10\n"
      ]
@@ -340,7 +315,7 @@
    ],
    "source": [
     "n_samples = 10\n",
-    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"loss\")"
+    "tracker.compute_overall_metrics(smooth_n_samples=n_samples, ignore_first_n_epochs=n_samples, metric_used_for_performance_analysis=\"auc_roc\")"
    ]
   },
   {
@@ -359,14 +334,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 133,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c23254aaa5ce4ebfa5c0158c7bdde1d8",
+       "model_id": "30a5d62fc29e4a5eb9a2df151041037f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -407,14 +382,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 114,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2d9838b523a4df8a7055a8acb90e49c",
+       "model_id": "0d28aed17de04d07a7dc99d716434c1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -448,46 +423,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 115,
    "id": "d1f46d23-85d4-48d0-8ae0-0c0681deee85",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'auc_roc': 0.8173166757197174,\n",
-       " 'loss': 0.4710118794983083,\n",
-       " 'accuracy': 0.7919191919191919,\n",
-       " 'f1_score': 0.5528612455076509,\n",
-       " 'auc_prec_recall': 0.6175650871416153,\n",
-       " 'precision': 0.5400400000000001,\n",
-       " 'tpr_at_95': 0.3901298701298701,\n",
-       " 'tpr': 0.6062236363636364,\n",
-       " 'tnr': 0.8413418181818182,\n",
-       " 'fpr': 0.1586581818181818,\n",
-       " 'fnr': 0.3937763636363636}"
-      ]
-     },
-     "execution_count": 231,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[115], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtracker\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcrossval_runs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mruns\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mbest_performances[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124meval\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# tracker.crossval_runs[0].runs.pop(1)\u001b[39;00m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
-    "tracker.crossval_runs[0].runs[1].best_performances[\"eval\"]\n",
+    "tracker.crossval_runs[0].runs[4].best_performances[\"eval\"]\n",
     "# tracker.crossval_runs[0].runs.pop(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 116,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6879a948cd543bdb4352956e38b8d5c",
+       "model_id": "660a82110da844d88d25485b7f892b21",
        "version_major": 2,
        "version_minor": 0
       },
@@ -512,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 48,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -530,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 117,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
@@ -539,12 +505,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58cda14285214b75a7b9d271ce3eb0fd",
+       "model_id": "d2c17c9f5ea642198171d8e7a4906de4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=('{\\'batch\\': \\'32\\', \\'lr\\': \\'0.001\\', \\'wd\\': …"
+       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '64', 'lr': '0.0005', 'wd': '0.0001',…"
       ]
      },
      "metadata": {},
@@ -673,9 +639,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai38",
+   "display_name": "Python (python_v3-8)",
    "language": "python",
-   "name": "ai38"
+   "name": "python_v3-8"
   },
   "language_info": {
    "codemirror_mode": {
