--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 22,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 23,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,12 +36,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-03-20_resnet18_logmel_combined_breaths_6s_FFT2048_fmax5500_112logmel_1_ChannelResnetInput_weightsOfFirstChannel_layerwiseLR1e-4_1e-3.pickle\n",
+      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-03-20_resnet18_logmel_combined_breaths_6s_FFT2048_fmax5500_112logmel_1_ChannelResnetInput_weightsOfFirstChannel_hyperparams_0v1.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
       "           smoothing:                     5\n",
       "           ignore_first_n_epochs:         5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\\evaluation_and_tracking.py:259: RuntimeWarning:\n",
+      "\n",
+      "Mean of empty slice\n",
+      "\n",
+      "C:\\Users\\Michi\\Anaconda3\\envs\\python_v3-8\\lib\\site-packages\\numpy\\lib\\nanfunctions.py:1878: RuntimeWarning:\n",
+      "\n",
+      "Degrees of freedom <= 0 for slice.\n",
+      "\n"
      ]
     }
    ],
@@ -52,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 31,
    "id": "5c6806ad-f200-435b-99fc-b504c286d8d0",
    "metadata": {},
    "outputs": [
@@ -94,19 +108,20 @@
       "           loss_function:                 BCEWithLogitsLoss\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                1\n",
+      "           parameter runs:                6\n",
       "           folds per run:                 1\n",
       "           epochs:                        250\n"
      ]
     }
    ],
    "source": [
-    "tracker.summarize(detail=\"compact\")"
+    "tracker.summarize(detail=\"compact\")\n",
+    "# tracker.summarize(detail=\"detail\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 25,
    "id": "8a88e565-f932-4e07-ab7c-f2f3d3079541",
    "metadata": {},
    "outputs": [
@@ -163,7 +178,7 @@
        "0  'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 26,
    "id": "76ece74f-fd67-4c38-91df-feab0ff1a455",
    "metadata": {},
    "outputs": [
@@ -241,7 +256,7 @@
        "0  label '0': 2266  -  label '1': 2196   combined_breaths  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 27,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5daa00028554d1b8fba18bdd48014c7",
+       "model_id": "b4d492a0c8d646299e82ec586b8ec414",
        "version_major": 2,
        "version_minor": 0
       },
@@ -297,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 28,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -310,6 +325,20 @@
       "           metric_used:                   auc_roc\n",
       "           smoothing:                     10\n",
       "           ignore_first_n_epochs:         10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\\evaluation_and_tracking.py:259: RuntimeWarning:\n",
+      "\n",
+      "Mean of empty slice\n",
+      "\n",
+      "C:\\Users\\Michi\\Anaconda3\\envs\\python_v3-8\\lib\\site-packages\\numpy\\lib\\nanfunctions.py:1878: RuntimeWarning:\n",
+      "\n",
+      "Degrees of freedom <= 0 for slice.\n",
+      "\n"
      ]
     }
    ],
@@ -334,14 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 29,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30a5d62fc29e4a5eb9a2df151041037f",
+       "model_id": "995355e188514cbcbf7c3c6a703b66a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -382,14 +411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 9,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d28aed17de04d07a7dc99d716434c1f",
+       "model_id": "b5c9c7ede29143859d4b9224bfead03a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -423,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "id": "d1f46d23-85d4-48d0-8ae0-0c0681deee85",
    "metadata": {},
    "outputs": [
@@ -434,7 +463,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[115], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtracker\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcrossval_runs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mruns\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mbest_performances[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124meval\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# tracker.crossval_runs[0].runs.pop(1)\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtracker\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcrossval_runs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mruns\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mbest_performances[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124meval\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# tracker.crossval_runs[0].runs.pop(1)\u001b[39;00m\n",
       "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
@@ -446,14 +475,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 11,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "660a82110da844d88d25485b7f892b21",
+       "model_id": "727dc1b2ceb142c19a8e97548a9c518b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -478,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -496,27 +525,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2c17c9f5ea642198171d8e7a4906de4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '64', 'lr': '0.0005', 'wd': '0.0001',…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "_ = widgets.interact(tracker.show_single_run, \n",
     "                 run_id=get_list_of_best_n_runs(sort_by_metric=True, metric=\"auc_roc\"),\n",
@@ -550,91 +564,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c0957ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mean1=a.mean()\n",
-    "median=a.median()\n",
-    "std1=torch.pow(torch.mean(torch.pow(diffs, 2.0)), 0.5)\n",
-    "\n",
-    "minimum=a.min()\n",
-    "maximum=a.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d64754ec-b51d-4773-84ea-6e048b07016a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "array=a\n",
-    "mean = torch.mean(array)\n",
-    "diffs = array - mean\n",
-    "var = torch.mean(torch.pow(diffs, 2.0))\n",
-    "std = torch.pow(var, 0.5)\n",
-    "zscores = diffs / std\n",
-    "skews = torch.mean(torch.pow(zscores, 3.0))\n",
-    "kurtoses = torch.mean(torch.pow(zscores, 4.0)) - 3.0 \n",
-    "skews, kurtoses"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2926e2f3-b1a8-4fa8-bea5-c4e3459d34cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "std1, std"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eab04444-fc92-432f-930c-86413019dfde",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z_scores=(a-mean)/std1\n",
-    "torch.mean(torch.pow(z_scores, 3)), torch.mean(torch.pow(z_scores, 4))-3 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6723767f-b80b-4ab2-bcf3-9d3b5e271b4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scipy.stats.skew(a.detach().numpy()), scipy.stats.kurtosis(a.detach().numpy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0195908-7f64-4309-afc0-5adde2e5a091",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = torch.Tensor([a.mean(), a.median(), a.std(), a.min(), a.max()])\n",
-    "b.requires_grad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d38453a9-d1d0-4bee-ac5e-7df78a8046c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.stack([a.mean(), a.median(), a.std(), a.min(), a.max()])"
-   ]
   }
  ],
  "metadata": {
