--- a/python/Jupyter_Notebooks/Infrasound analysis and new Features for resnet.ipynb
+++ b/python/Jupyter_Notebooks/Infrasound analysis and new Features for resnet.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "audio, sr = librosa.load(\"infrasound.wav\", sr=None)\n"
+    "audio, sr = librosa.load(\"Jupyter_Notebooks/infrasound.wav\", sr=None)\n"
    ]
   },
   {
