--- a/python/Jupyter_Notebooks/Metadata_Processing.ipynb
+++ b/python/Jupyter_Notebooks/Metadata_Processing.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a56e2404",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -1526,13 +1534,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "b4c55665-dd52-4197-92a9-e7c5f244a55f",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"data/Coswara_processed/full_meta_data.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "76fd009d-969f-4b2e-80c4-46dd3c02b94e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "relevant_df = df[[\"audio_quality_breathing-deep\", \"audio_quality_breathing-shallow\", \"user_id\"]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "41e9550e-a1d2-42cb-a74a-900b0ad02877",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>audio_quality_breathing-deep</th>\n",
+       "      <th>audio_quality_breathing-shallow</th>\n",
+       "      <th>user_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6CcWU1oa6YeaL1hletunsAHLiOx2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      audio_quality_breathing-deep  audio_quality_breathing-shallow  \\\n",
+       "2000                             2                                2   \n",
+       "\n",
+       "                           user_id  \n",
+       "2000  6CcWU1oa6YeaL1hletunsAHLiOx2  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "relevant_df[relevant_df[\"user_id\"] == \"6CcWU1oa6YeaL1hletunsAHLiOx2\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aca3bf5-e4f9-43bf-a3c5-16aaea3facd9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4c611e8-84b7-4445-9262-7898fc3bd576",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df64f73a-8bf4-46fb-b983-d1b398353a36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
